Add today schedule into box

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -197,7 +197,7 @@ console.log('tttttt', text)
 
 
                 $box.text(text);
-								// box.appendChild()
+								box.appendChild(table)
             }
 
             // Default Calendar
