Redirect source link

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<meta property="og:image" content="http://www.pigno.se/barn/PIGNOSE-Calendar/demo/img/cover@250.png" />
 	<meta property="og:site_name" content="PIGNOSE" />
 	<title>PIGNOSE Calendar</title>
-	<link rel="shortcut icon" type="image/x-icon" href="../demo/img/pignose-ico.ico" />
-	<link rel="stylesheet" type="text/css" href="./css1/semantic.ui.min.css">
-	<link rel="stylesheet" type="text/css" href="./css1/prism.css" />
-	<link rel="stylesheet" type="text/css" href="./css1/calendar-style.css" />
-	<link rel="stylesheet" type="text/css" href="./css1/style.css" />
-	<link rel="stylesheet" type="text/css" href="./css2/pignose.calendar.min.css" />
+	<link rel="shortcut icon" type="image/x-icon" href="./style/img/pignose-ico.ico" />
+	<link rel="stylesheet" type="text/css" href="./style/css1/semantic.ui.min.css">
+	<link rel="stylesheet" type="text/css" href="./style/css1/prism.css" />
+	<link rel="stylesheet" type="text/css" href="./style/css1/calendar-style.css" />
+	<link rel="stylesheet" type="text/css" href="./style/css1/style.css" />
+	<link rel="stylesheet" type="text/css" href="./style/css2/pignose.calendar.min.css" />
 
 </head>
 <body>
@@ -75,10 +75,10 @@
 			</div>
 		</div>
 	</div>
-    <script type="text/javascript" src="./js/jquery.latest.min.js"></script>
-    <script type="text/javascript" src="./js/semantic.ui.min.js"></script>
-    <script type="text/javascript" src="./js/prism.min.js"></script>
-    <script type="text/javascript" src="./js/pignose.calendar.full.min.js"></script>
+    <script type="text/javascript" src="./style/js/jquery.latest.min.js"></script>
+    <script type="text/javascript" src="./style/js/semantic.ui.min.js"></script>
+    <script type="text/javascript" src="./style/js/prism.min.js"></script>
+    <script type="text/javascript" src="./style/js/pignose.calendar.full.min.js"></script>
     <script type="text/javascript">
         //<![CDATA[
         $(function() {
