--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" type="text/css" href="./style/css1/calendar-style.css" />
 	<link rel="stylesheet" type="text/css" href="./style/css1/style.css" />
 	<link rel="stylesheet" type="text/css" href="./style/css2/pignose.calendar.min.css" />
+	<script src="./src/index.js" charset="utf-8"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 <body>
