--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<link rel="stylesheet" type="text/css" href="./style/css1/calendar-style.css" />
 	<link rel="stylesheet" type="text/css" href="./style/css1/style.css" />
 	<link rel="stylesheet" type="text/css" href="./style/css2/pignose.calendar.min.css" />
-	<script src="./src/index.js" charset="utf-8"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
@@ -33,7 +32,8 @@
 		<div id="basic" class="article">
 			<!-- <h3><span>Basic</span></h3> -->
 			<div class="calendar"></div>
-			<div class="box" style="display: block;">Today's Schedule
+			<div class="box" style="display: block;">
+				<p class="schedule-header">Today's Schedule </p>
 				<div id="shifts">
 					<div class="col" id="col-left">
 					 <div class="time">
@@ -87,9 +87,11 @@
             $('#wrapper .version strong').text('v' + $.fn.pignoseCalendar.version);
 
 			let nowDate = new Date();
-			let date = `${nowDate.getFullYear()}-${(nowDate.getMonth()+1)}-${nowDate.getDate()}`
+			let day = `0${nowDate.getDate()}`.slice(-2)
+			let month = `0${nowDate.getMonth()+1}`.slice(-2)
+			let todayDate = `${nowDate.getFullYear()}-${month}-${day}`
 			let currentDate = document.querySelector('#current-date')
-			currentDate.innerHTML = `Today's ${date}`
+			currentDate.innerHTML = `Today's ${todayDate}`
 
             function onClickHandler(date, obj) {
                 /**
@@ -105,7 +107,7 @@
                 var $box = $calendar.parent().siblings('.box').show();
 								let box = document.querySelector('.box')
 								let shifts = document.querySelector('#shifts')
-                var text = `Today's Schedule:  `;
+                var text = ``;
 
                 if(date[0] !== null) {
                     text += date[0].format('YYYY-MM-DD');
@@ -122,9 +124,9 @@
                 }
 console.log('tttttt', text)
 
-
-                $box.text(text);
-								box.appendChild(shifts)
+				const scheduleHeader = document.querySelector('.schedule-header')
+				scheduleHeader.innerHTML = text
+            
             }
 
             // Default Calendar
@@ -136,6 +138,7 @@ console.log('tttttt', text)
             $('.menu .item').tab();
         });
         //]]>
-    </script>
+	</script>
+	<script src="./src/index.js" charset="utf-8"></script>
 </body>
 </html>
