--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 					</div>
 
 					<div class="col" id="col-right">
-						<div class="shift user">
+						<div id="10:00" class="shift user">
 						 <span class="shift-text">Betty 10:00 - 14:00</span>
 						 <button type="button" name="button">Release Shift</button>
 						</div>
-						<div class="shift release">
+						<div id="14:00" class="shift release">
 						 <span class="shift-text">Brady 14:00 - 18:00</span>
 						 <button type="button" name="button">Take Shift</button>
 						</div>
-						<div class="shift release">
+						<div id="18:00" class="shift release">
 						 <span class="shift-text">Justin 18:00 - 22:00</span>
-						 <button type="button" name="button">Take Shift</button>
+						 <button id="take-shift" type="button" name="button">Take Shift</button>
 						</div>
 					</div>
 
