separating functions by group member .js

--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@ console.log('tttttt', text)
   <script type="text/javascript" src="./style/js/pignose.calendar.full.min.js"></script>
   <script type="text/javascript" src="./src/calendar.js"></script>
 	<script src="./src/index.js" charset="utf-8"></script>
+	<script src="./src/brady.js" charset="utf-8"></script>
 </body>
 </html>
