added shiftid, employeeid, and reqid to data attributes for each shift, added current or request class to each shift

--- a/index.html
+++ b/index.html
@@ -48,17 +48,14 @@
 					</div>
 
 					<div class="col" id="col-right">
-						<div id="10:00" class="shift user">
+						<div id="10:00" class="shift">
 						 <p class="shift-text"></p>
-						 <!-- <button type="button" name="button">Release Shift</button> -->
 						</div>
-						<div id="14:00" class="shift release">
+						<div id="14:00" class="shift">
 						 <p class="shift-text"></p>
-						 <!-- <button type="button" name="button">Take Shift</button> -->
 						</div>
-						<div id="18:00" class="shift release">
+						<div id="18:00" class="shift">
 						 <p class="shift-text"></p>
-						 <!-- <button type="button" name="button">Take Shift</button> -->
 						</div>
 					</div>
 			</div>
