--- a/index.html
+++ b/index.html
@@ -9,39 +9,42 @@
 	<link rel="stylesheet" href="./style/css1/style2.css">
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
-<body> 
+<body>
 	<h1 id="app-header" >Welcome to MyShifts</h1>
 <div class="forms">
 	<ul class="tab-group">
 		<li class="tab active"><a href="#login">Log In</a></li>
 		<li class="tab"><a href="#signup">Sign Up</a></li>
 	</ul>
-	<form action="#" id="login">
+	<form action="schedule.html" id="login">
 	      <div class="input-field">
 	        <label for="email-login">Email</label>
 	        <input id="email-login" type="email" name="email" required="email" />
-	        <label for="password-login">Password</label> 
+	        <label for="password-login">Password</label>
 	        <input id="password-login" type="password" name="password" required/>
-	        <input type="submit" value="Login" class="button"/>
+					<section class="alert alert-danger text-center">Password does not match with email</section>
+	        <input id="log-in" type="submit" value="Login" class="button"/>
 	        <p class="text-p"> <a href="#">Forgot password?</a> </p>
 	      </div>
 	  </form>
 	  <form action="#" id="signup">
 	      <div class="input-field">
-					<label for="first-name">First Name</label> 
+					<label for="first-name">First Name</label>
 					<input id="first-name" type="name" name="first-name" required/>
-					<label for="last-name">Last Name</label> 
+					<label for="last-name">Last Name</label>
 					<input id="last-name" type="name" name="last-name" required/>
-	        <label for="email-signup">Email</label> 
+	        <label for="email-signup">Email</label>
 	        <input id="email-signup" type="email" name="email" required="email"/>
-	        <label for="password-signup">Password</label> 
+	        <label for="password-signup">Password</label>
 	        <input id="password-signup" type="password" name="password" required/>
-	        
+
 	        <input type="submit" value="Sign up" class="button" id="sign-up" />
 	      </div>
 	  </form>
 </div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script type="text/javascript" src="./src/index.js"></script>
 <script type="text/javascript" src="./src/signup.js"></script>
+<script type="text/javascript" src="./src/login.js"></script>
 </body>
 </html>
