--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	        <input id="email-login" type="email" name="email" required="email" />
 	        <label for="password-login">Password</label>
 	        <input id="password-login" type="password" name="password" required/>
-					<section class="alert alert-danger text-center">Password does not match with email</section>
+					<section class="alert alert-danger text-center">Password or Email is incorrect</section>
 	        <input id="log-in" type="submit" value="Login" class="button"/>
 	        <p class="text-p"> <a href="#">Forgot password?</a> </p>
 	      </div>
@@ -43,7 +43,6 @@
 	  </form>
 </div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script type="text/javascript" src="./src/index.js"></script>
 <script type="text/javascript" src="./src/signup.js"></script>
 <script type="text/javascript" src="./src/login.js"></script>
 </body>
