added logout and token handling

--- a/schedule.html
+++ b/schedule.html
@@ -28,7 +28,10 @@
 			<h4 class="version">Latest version <strong></strong></h4>
 		</div> -->
   <!-- </div> -->
-		<h1 id="current-date"></h1>
+	<div>
+		<div><button id="logout">Logout</button></div>
+		<div><h1 id="current-date"></h1></div>
+		</div>
 		<div id="basic" class="article">
 			<!-- <h3><span>Basic</span></h3> -->
 			<div class="calendar"></div>
@@ -60,7 +63,7 @@
 					</div>
 			</div>
 			<button type="button" name="button" id="confirm">Confirm</button>
-			
+
 			<!-- <ul class="ui top pointing secondary menu">
 				<a href="../#" role="presentation" class="item active" data-tab="html-basic">HTML</a>
 				<a href="../#" role="presentation" class="item" data-tab="javascript-basic">Javascript</a>
