fixed schedule header date

--- a/schedule.html
+++ b/schedule.html
@@ -36,7 +36,7 @@
 			<!-- <h3><span>Basic</span></h3> -->
 			<div class="calendar"></div>
 			<div class="box">
-				<p class="schedule-header">2018-03-22</p>
+				<p class="schedule-header"></p>
 				<div id="shifts">
 					<div class="col" id="col-left">
 					 <div class="time">
