style and color tweaks, added logo

--- a/schedule.html
+++ b/schedule.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="./style/css1/calendar-style.css" />
 	<link rel="stylesheet" type="text/css" href="./style/css1/style.css" />
 	<link rel="stylesheet" type="text/css" href="./style/css2/pignose.calendar.css" />
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
@@ -63,6 +64,20 @@
 					</div>
 			</div>
 			<button type="button" name="button" id="confirm">Confirm</button>
+			<div id="legend">
+			  <div class="leg-col">
+			    <div id="round1">
+			    </div>
+					<div>
+						Your Shift
+					</div>
+			  </div>
+				<div class="leg-col">
+				  <div id="round2">
+				  </div>
+				  Available Shift
+				</div>
+			</div>
 
 			<!-- <ul class="ui top pointing secondary menu">
 				<a href="../#" role="presentation" class="item active" data-tab="html-basic">HTML</a>
