--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<!--StyleSheet-->
 	<link rel="stylesheet" href="./style/css1/style2.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-	<h1 id="app-header" >Welcome to MyShifts</h1>
+
+	  <img src="logo.png">
+
+	  <h1 id="app-header">MyShifts</h1>
 <div class="forms">
 	<ul class="tab-group">
 		<li class="tab active"><a href="#login">Log In</a></li>
