--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="forms">
 	<ul class="tab-group">
 		<li class="tab active"><a href="#login">Log In</a></li>
-		<li class="tab"><a href="#signup">Sign Up</a></li>
+		<li class="tab" id="signup-tab"><a href="#signup">Sign Up</a></li>
 	</ul>
 	<form action="schedule.html" id="login">
 	      <div class="input-field">
