--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	  </form>
 </div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script type="text/javascript" src="./src/shared.js"></script>
 <script type="text/javascript" src="./src/signup.js"></script>
 <script type="text/javascript" src="./src/login.js"></script>
 </body>
