--- a/schedule.html
+++ b/schedule.html
@@ -98,6 +98,7 @@
 <script type="text/javascript" src="./style/js/semantic.ui.min.js"></script>
 <script type="text/javascript" src="./style/js/prism.min.js"></script>
 <script type="text/javascript" src="./style/js/pignose.calendar.full.min.js"></script>
+<script type="text/javascript" src="./src/shared.js"></script>
 <script type="text/javascript" src="./src/calendar.js"></script>
 <script src="./src/index.js" charset="utf-8"></script>
 <script src="./src/brady.js" charset="utf-8"></script>
